# UnitTesting

project1/: CMakeLists.txt
project1/src/: CMakeLists.txt  Example.cpp  Example.h
project1/tests/: CMakeLists.txt  ExampleTests.cpp
